[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/combate/controladorDeTurnos/controladorDeTurnos.gd" type="Script" id=1]
[ext_resource path="res://cenas/ferramentas/controladorDeTurnos/controladorCampo.tscn" type="PackedScene" id=2]
[ext_resource path="res://cenas/ferramentas/controladorDeTurnos/controladorAnimacaoNew.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/ferramentas/controladorDeTurnos/controladorDeFases.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas/ferramentas/controladorDeTurnos/controladorMao.tscn" type="PackedScene" id=6]
[ext_resource path="res://script/combate/controladorDeTurnos/controladorPilha.gd" type="Script" id=7]
[ext_resource path="res://cenas/ferramentas/controladorDeTurnos/controladorBaralho.tscn" type="PackedScene" id=8]

[node name="ControladorDeTurnos" type="Node2D"]
script = ExtResource( 1 )

[node name="controladorPilha" parent="." instance=ExtResource( 4 )]
script = ExtResource( 7 )

[node name="controladorDeFases" parent="." instance=ExtResource( 5 )]

[node name="controladorDeAnimacao" parent="." instance=ExtResource( 4 )]

[node name="controladorCampo" parent="." instance=ExtResource( 2 )]

[node name="controladorBaralho" parent="." instance=ExtResource( 8 )]

[node name="controladorMao" parent="." instance=ExtResource( 6 )]
